# wittypi5

./: .gitignore  LICENSE  README.md  change-log.md  pyproject.toml  requirements.piptools
src/wittypi5/: __init__.py  device.py  registers.py
