[project]
name = "wittypi5"
version = "0.1.0.post1"
description = "Python driver for Witty Pi 5 HAT+ on Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Josh Burnett", email = "josh_github@burnettsonline.org"}
]
dependencies = [
    "smbus2>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/joshburnett/wittypi5"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wittypi5"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
